# owlbot-remote

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v1.0.3.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
OwlBot/: pyproject.toml
docs/: DEVELOPMENT.md  PYTHON_STANDARDS_SKILL.md  README-de.md  README-es.md  README-fa.md  README-fr.md  README-it.md  README-ja.md  README-ko.md  README-nl.md  README-ru.md  README-tr.md  README-zh.md  SECURITY.md
examples/: minimum_example.py  my_owlbot_script.py
src/owlbot/: __init__.py  __main__.py
src/owlbot/config/: __init__.py
src/owlbot/core/: __init__.py  bot.py  decorators.py  help.py  utils.py
src/owlbot/modules/: __init__.py  audio.py  base.py  files.py  input.py  monitoring.py  network.py  processes.py  screen.py  system.py
src/owlbot/platform/: __init__.py  telegram.py
tests/: __init__.py  conftest.py  test_bot.py  test_cli.py  test_config.py  test_monitoring.py  test_utils.py
