[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owlbot-remote"
version = "1.0.3"
description = "OwlBot — Modular Telegram Remote Control Agent for Windows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["remote-control", "telegram-bot", "windows", "automation", "owlbot", "ip-lookup", "gps", "geolocation"]
authors = [
    {name = "Sepehr H.I"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Natural Language :: English",
]

dependencies = [
    # Core
    "pyTelegramBotAPI>=4.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
# Cross-platform UI modules (screenshot, webcam, stream)
ui = [
    "pyautogui>=0.9.53",
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
]
# Windows-only system modules (audio, keyboard, wifi, WMI)
windows = [
    "wmi>=1.5.1; sys_platform == 'win32'",
    "pycaw>=20181208; sys_platform == 'win32'",
    "keyboard>=0.13.5; sys_platform == 'win32'",
    "pywifi>=1.1.12; sys_platform == 'win32'",
    "pyaudio>=0.2.11; sys_platform == 'win32'",
]
# Everything at once
all = [
    "owlbot-remote[ui,windows]",
]
# Development / CI
dev = [
    "build>=1.0.0",
    "wheel>=0.40.0",
    "flake8>=6.0.0",
    "mypy>=1.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/sepehrHi/OwlBot"
Repository = "https://github.com/sepehrHi/OwlBot"
"Bug Tracker" = "https://github.com/sepehrHi/OwlBot/issues"
Documentation = "https://github.com/sepehrHi/OwlBot#readme"

[project.scripts]
owlbot = "owlbot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["owlbot", "owlbot.*"]

[tool.setuptools.package-data]
"owlbot" = ["py.typed"]

# NOTE: flake8 does not read [tool.flake8] from pyproject.toml — it is
# configured in .flake8 at the repo root instead. This section is
# intentionally absent here to avoid a dead/misleading duplicate config.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/", "build/", "dist/"]
