[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owlbot-remote"  
version = "1.0.0-beta"
description = "OwlBot — Modular Telegram Windows Remote Control Agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MR_owl"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pytelegrambotapi>=4.0.0",
    "pyautogui",
    "keyboard",
    "psutil",
    "opencv-python",
    "numpy",
    "requests",
    "pyperclip",
    "pywifi",
    "wmi",
    "pycaw",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["owlbot*"]